# Tohum

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakePresets.json  README.md
archive/cpp-prototype/: CMakeLists.txt
archive/cpp-prototype/include/tohum/: opcodes.hpp  value.hpp
archive/cpp-prototype/src/: main.cpp
core/: tohum_memory.c  tohum_memory.h
core/ds/: tohum_array.h
examples/: bench_fib.m  c_parser.m  collatz.m  euler1.m  fib.m  hello.m  lex_collect.m  machine_analyze.m  machine_analyze_test.m  machine_repl.m  self_codegen.m  self_interp.m  test_argv.m  test_simple.m  test_use.m
examples/lib/: math.m  strings.m
include/tohum/: vm.hpp
m/bootstrap/: bytecode.h  codegen.c  lexer.c  lexer.h  mc.c  test_codegen.c  test_lexer.c  vm.c  vm.h
m/spec/: M.md
src/: value.cpp  vm.cpp
